Stop conflating negative ts and chained ogg workarounds.

Now that opus is supported in containers outside of ogg, we shouldn't
allow negative timestamp fixups to imply the need for chained ogg
support. I.e. we shouldn't apply chained ogg workarounds to mp4
files or any other container that opus is allowed in now.

This has been broken for a while, but h264+bframes and opus is not
common, so the issue hasn't arisen before. The fix is simply to
separate these workaround flags and restrict the chained ogg one
to only content which we expect to support.

BUG=795392
TEST=new unittest.

Cq-Include-Trybots: master.tryserver.chromium.android:android_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel
Change-Id: I3a7465110fd1f1defe4b41f1f471e5050d8c469a
Reviewed-on: https://chromium-review.googlesource.com/830831
Commit-Queue: Dale Curtis <dalecurtis@chromium.org>
Reviewed-by: Thomas Guilbert <tguilbert@chromium.org>
Cr-Commit-Position: refs/heads/master@{#524566}
Former-commit-id: b3c04f947ebe878bd1c0787a1347c968460841a3